--- a/CSS/main-menu.css
+++ b/CSS/main-menu.css
@@ -1,6 +1,7 @@
 .main-menu {
+  grid-area: m;
   z-index: 2;
-  width: 13rem;
+  
   height: 100vh;
   position: fixed;
   background-color: rgb(25, 25, 25);
